<?xml version="1.0" encoding="utf-8"?>
<com.factor.bouncy.BouncyNestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:fling_animation_size=".4"
    app:overscroll_animation_size=".4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_profile"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_profile_summary"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-20dp"
            android:layout_below="@+id/register_title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_firstNameTIL"
            android:layout_below="@+id/register_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="?colorAccent"
            app:hintTextColor="?colorAccent"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_firstNameTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_lastNameTIL"
            android:layout_below="@+id/register_firstNameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="?colorAccent"
            app:hintTextColor="?colorAccent"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_lastNameTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_emailTIL"
            android:layout_below="@+id/register_lastNameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="?colorAccent"
            app:hintTextColor="?colorAccent"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:startIconDrawable="@drawable/ic_round_alternate_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_emailTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_passwordTIL"
            android:layout_below="@+id/register_emailTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="90dp"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="?colorAccent"
            app:hintTextColor="?colorAccent"
            app:startIconDrawable="@drawable/ic_outline_lock"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_passwordTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

</com.factor.bouncy.BouncyNestedScrollView>