<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/panelActions">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/launcherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_round"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/launcher_icon" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/launcherIcon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/welcome_to_gym"
                android:textColor="?colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome"
                android:layout_centerHorizontal="true"
                android:text="@string/login"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_emailTIL"
                android:layout_below="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                app:boxStrokeColor="?colorAccent"
                app:hintTextColor="?colorAccent"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:startIconDrawable="@drawable/ic_round_alternate_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_emailTIET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_passwordTIL"
                android:layout_below="@+id/login_emailTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                app:boxStrokeColor="?colorAccent"
                app:hintTextColor="?colorAccent"
                app:startIconDrawable="@drawable/ic_outline_lock"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_passwordTIET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/panelActions"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorControlNormal"
            android:alpha="0.3"
            android:layout_marginTop="1dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            app:backgroundTint="?colorPrimary"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:textColor="?colorPrimary"
            android:layout_toStartOf="@+id/buttonLogin"/>

    </RelativeLayout>

</RelativeLayout>