<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_holder"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="?selectableItemBackground">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_message"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:alpha="0.6"
        app:tint="?colorPrimary" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_title"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:layout_toStartOf="@+id/item_date"
        android:layout_toEndOf="@+id/icon"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/item_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_summary"
        android:layout_below="@+id/item_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_toEndOf="@+id/icon"
        android:layout_toStartOf="@+id/item_date"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?colorControlNormal"
        android:alpha="0.3"
        android:layout_below="@+id/item_summary"
        android:layout_marginStart="64dp"/>

    <TextView
        android:id="@+id/item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_date"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentEnd="true"
        android:alpha="0.8" />

    <ImageView
        android:id="@+id/item_image_favourite"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/item_date"
        android:src="@drawable/ic_round_favorite"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="-18dp"
        android:alpha="0.7"

        app:tint="?colorSecondaryVariant" />

</RelativeLayout>