<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Adapters.UserPreviewActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Your account"/>

    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_firstNameTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="94dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:boxStrokeColor="?colorAccent"
                app:hintTextColor="?colorAccent"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_firstNameTIET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_lastNameTIL"
                android:layout_below="@+id/register_firstNameTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                app:boxStrokeColor="?colorAccent"
                app:hintTextColor="?colorAccent"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_lastNameTIET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/nonEditableInfoTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_cannot_edit_these_info"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="-10dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/register_lastNameTIL"
                android:textStyle="italic"
                android:textSize="16sp"
                android:textAlignment="textEnd"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_emailTIL"
                android:layout_below="@+id/nonEditableInfoTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                app:boxStrokeColor="?colorAccent"
                app:hintTextColor="?colorAccent"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:startIconDrawable="@drawable/ic_round_alternate_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_emailTIET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_passwordTIL"
                android:layout_below="@+id/register_emailTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                app:boxStrokeColor="?colorAccent"
                app:hintTextColor="?colorAccent"
                app:startIconDrawable="@drawable/ic_outline_lock"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_passwordTIET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/accountUpdateApplyChangesMBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_changes"
                app:backgroundTint="?colorAccent"
                app:icon="@drawable/ic_twotone_check_circle"
                android:layout_below="@+id/register_passwordTIL"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"/>

            <ImageView
                android:id="@+id/imageSignal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:alpha="0.6"
                android:layout_below="@+id/accountUpdateApplyChangesMBT"
                android:src="@drawable/ic_round_signal_wifi_statusbar_connected_no_internet_4_24"/>

            <TextView
                android:id="@+id/importantMessageInfoTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/internet_connection_account_update"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_below="@+id/imageSignal"
                android:alpha="0.8"
                android:layout_marginBottom="20dp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>

