<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/relativeReceipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/receipt_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_twotone_receipts"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_title"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textColor="?colorAccent"
            android:layout_toEndOf="@+id/receipt_image"
            android:textStyle="bold"
            android:layout_toStartOf="@+id/item_card_amount"
            />

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_date"
            android:layout_below="@+id/item_title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-15dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/receipt_image"
            android:layout_marginBottom="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/item_card_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="27dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/item_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_amount"
                android:layout_below="@+id/item_dotted_line1"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/colorControlNormal"
        android:alpha="0.3"
        android:layout_marginStart="64dp"
        android:layout_below="@+id/relativeReceipt"/>

</RelativeLayout>