<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreviewMessageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarLayout"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="?android:attr/colorBackground"
            app:titleTextColor="?colorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- View message panel -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout">

        <RelativeLayout
            android:id="@+id/gradientBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/previewMessageDateTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_date"
                android:textAlignment="center"
                android:layout_margin="20dp"
                android:textStyle="italic"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/previewMessageTitleTIL"
                android:layout_below="@+id/previewMessageDateTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:boxStrokeColor="?colorAccent"
                app:hintTextColor="?colorAccent"
                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusTopStart="14dp"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusBottomEnd="14dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/previewMessageTitleTIET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message_title"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/previewMessageBodyTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="?colorAccent"
                app:hintTextColor="?colorAccent"
                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusTopStart="14dp"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusBottomEnd="14dp"
                android:layout_below="@id/previewMessageTitleTIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/previewMessageBodyTIET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message_body"
                    android:focusable="false"
                    android:clickable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>